# hiq-programming-test

./: .$flow-diagram.drawio.dtmp  .gitignore  CMakeLists.txt  Main.cpp  README.md  class-diagrams.html  cppcheck.xml  flow-diagram.drawio  sample_data.txt  samples.txt  test.txt  test_cases.txt  testcase_tests.txt
.github/workflows/: cmake.yml
doc/: Doxyfile
doc/html/: _action_8h.html  _action_8h.js  _action_8h__dep__incl.dot  _action_8h__incl.dot  _action_8h_source.html  _board_8h.html  _board_8h__dep__incl.dot  _board_8h__incl.dot  _board_8h_source.html  _direction_8h.html  _direction_8h.js  _direction_8h__dep__incl.dot  _direction_8h__incl.dot  _direction_8h_source.html  _point_8h.html  _point_8h.js  _point_8h__dep__incl.dot  _point_8h__incl.dot  _point_8h_source.html  _robot_8h.html  _robot_8h__dep__incl.dot  _robot_8h__incl.dot  _robot_8h_source.html  _test_case_8h.html  _test_case_8h.js  _test_case_8h__dep__incl.dot  _test_case_8h__incl.dot  _test_case_8h_source.html  _test_case_reader_8h.html  _test_case_reader_8h.js  _test_case_reader_8h__incl.dot  _test_case_reader_8h_source.html  annotated.html  annotated_dup.js  class_board-members.html  class_board.html  class_board.js  class_board__coll__graph.dot  class_robot-members.html  class_robot.html  (+31 more)
doc/html/d0/dc4/: struct_point-members.html
doc/html/d1/d18/: _point_8h.html  _point_8h.js
doc/html/d1/d42/: class_board-members.html
doc/html/d1/d5d/: class_test_case_reader.html  class_test_case_reader.js
doc/html/d2/dc8/: class_demo_app-members.html
doc/html/d3/dfd/: class_board.html  class_board.js
doc/html/d4/d84/: class_robot.html  class_robot.js
doc/html/d4/d96/: class_demo_app.html  class_demo_app.js
doc/html/d5/d15/: class_robot-members.html
doc/html/d5/da4/: _test_case_reader_8h.html  _test_case_reader_8h.js
doc/html/d5/de9/: class_test_case_reader-members.html
doc/html/d6/d35/: _direction_8h.html  _direction_8h.js
doc/html/d7/d6a/: _action_8h.html  _action_8h.js
doc/html/d8/dc8/: struct_point.html  struct_point.js
doc/html/d9/d1c/: class_test_case.html  class_test_case.js
doc/html/de/d12/: _test_case_8h.html  _test_case_8h.js
doc/html/de/d18/: _demo_app_8h.html  _demo_app_8h.js
doc/html/de/ded/: _board_8h.html  _board_8h.js
doc/html/df/d39/: class_test_case-members.html
doc/html/df/d42/: _robot_8h.html  _robot_8h.js
doc/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_1.js  classes_3.js  classes_4.js  enums_0.js  enums_1.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  enumvalues_5.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_5.js  functions_6.js  (+10 more)
inc/: Action.h  Board.h  Command.h  CommandReader.h  DemoApp.h  Direction.h  Point.h  Robot.h  TestCase.h  TestCaseReader.h  TestCommandReader.h
src/: Action.cpp  Board.cpp  Command.cpp  CommandReader.cpp  DemoApp.cpp  Direction.cpp  Point.cpp  Robot.cpp  TestCase.cpp  TestCaseReader.cpp  TestCommandReader.cpp
test/: CMakeLists.txt  test_board.cpp  test_point.cpp  test_robot.cpp
tests/: CMakeLists.txt  test_action.cpp  test_board.cpp  test_direction.cpp  test_point.cpp  test_robot.cpp  test_testcase.cpp  test_testcase_reader.cpp
